added build status to README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Git Store
-TiddlyWeb store implementation using Git - based on the default text store, this
-store uses Git to keep track of tiddler revisions.
+[![build status](https://secure.travis-ci.org/FND/tiddlywebplugins.gitstore.png)](http://travis-ci.org/FND/tiddlywebplugins.gitstore)
+
+TiddlyWeb store implementation using Git - based on the default text store,
+this store uses Git to keep track of tiddler revisions
