--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Git Store
+gitstore
 [![build status](https://secure.travis-ci.org/FND/tiddlywebplugins.gitstore.png)](http://travis-ci.org/FND/tiddlywebplugins.gitstore)
 
 TiddlyWeb store implementation using Git - based on the default text store,
